İletişim sayfası yapımı
İletişim sayfasının form kısmını yaptım. Giriş sayfasındaki arka planı değiştirdim.

--- a/web sitem/index.html
+++ b/web sitem/index.html
@@ -17,7 +17,7 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="nav-link" href="#iletisim">İletişim</a>
+              <a class="nav-link" href="iletisim.html">İletişim</a>
               <a class="nav-link" href="hakkımda.html" >Hakkında</a>
               <a class="nav-link" href="özgeçmiş.html" >Özgeçmiş</a>
               <a class="nav-link" href="şehrim.html">Şehrim</a>
@@ -28,18 +28,8 @@
           </div>
         </div>
       </nav>
-      <div class="container">
-        <div class="row">
-            <div class="col-md-4">
-
-            </div>
-        </div>
-      </div>
-      <img src="C:\Users\Huawei\web sitem\img\blue.jpg" class="img-fluid"  alt="...">
-      <div id="iletisim">
-        <form>
-            <input type="text" name="isim" >Adınız: <br>
-        </form>
-    </div>
+      
+      
+    <h1>Web Siteme Hoşgeldiniz !</h1>
 </body>
 </html>
