--- a/web sitem/index.html
+++ b/web sitem/index.html
@@ -19,7 +19,7 @@
             <div class="navbar-nav">
               <a class="nav-link" href="iletisim.html">İletişim</a>
               <a class="nav-link" href="hakkımda.html" >Hakkında</a>
-              <a class="nav-link" href="özgeçmiş.html" >Özgeçmiş</a>
+              <a class="nav-link" href="ozgecmis.html" >Özgeçmiş</a>
               <a class="nav-link" href="şehrim.html">Şehrim</a>
               <a class="nav-link" href ="mirasımız.html">Mirasımız</a>
               <a class="nav-link" href="ilgialanı.html">İlgi alanlarım</a>
