hakkımda sayfası yapımı
hakkında sayfası yapımına başladım .Özgeçmiş sayfasında fontla ilgili değişiklikler yaptım .

--- a/web sitem/ozgecmis.html
+++ b/web sitem/ozgecmis.html
@@ -55,9 +55,9 @@
 
                 <h2><b>Eğitim</b></h2>
                 <p> <b>Sakarya Üniversitesi</b></p>
-                <p>-İngilizce Hazırlık 2021-2022.</p>
+                <p>-İngilizce Hazırlık (2021-2022)</p>
                 <p><b>Sakarya Üniversitesi</b></p>
-                <p>-Bilgisayar Mühendisliği 2022-2026.</p>
+                <p>-Bilgisayar Mühendisliği (2022-2026)</p>
                 
                     
                 <h2><b>Beceriler</b></h2>
