--- a/web sitem/ozgecmis.html
+++ b/web sitem/ozgecmis.html
@@ -17,7 +17,7 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="nav-link" href="iletişim.html" >İletişim</a>
+              <a class="nav-link" href="iletisim.html" >İletişim</a>
               <a class="nav-link" href="hakkımda.html" >Hakkında</a>
               <a class="nav-link" href="ozgecmis.html" >Özgeçmiş</a>
               <a class="nav-link" href="şehrim.html">Şehrim</a>
