--- a/web sitem/şehrim.html
+++ b/web sitem/şehrim.html
@@ -20,9 +20,9 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-link" href="iletişim.html" >İletişim</a>
+          <a class="nav-link" href="iletisim.html" >İletişim</a>
           <a class="nav-link" href="hakkımda.html" >Hakkında</a>
-          <a class="nav-link" href="özgeçmiş.html" >Özgeçmiş</a>
+          <a class="nav-link" href="ozgecmis.html" >Özgeçmiş</a>
           <a class="nav-link" href="şehrim.html">Şehrim</a>
           <a class="nav-link" href ="mirasımız.html">Mirasımız</a>
           <a class="nav-link" href="ilgialanı.html">İlgi alanlarım</a>
