login sayfası devamı
son kontrolleri yaptım

--- a/web sitem/login.html
+++ b/web sitem/login.html
@@ -17,7 +17,7 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="nav-link" href="iletişim.html" >İletişim</a>
+              <a class="nav-link" href="iletisim.html" >İletisim</a>
               <a class="nav-link" href="hakkımda.html" >Hakkında</a>
               <a class="nav-link" href="ozgecmis.html" >Özgeçmiş</a>
               <a class="nav-link" href="şehrim.html">Şehrim</a>
@@ -75,10 +75,7 @@
             return;
           }
   
-          // Formun gönderilmesi için burada bir işlem yapabilirsiniz.
-          // Örneğin, formun action özelliğini belirleyebilirsiniz:
-          // document.getElementById('myForm').action = 'giris.php';
-          // document.getElementById('myForm').submit();
+        
         });
       </script>
     
